# nRF-52-DK-EO

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  Janus Setup.md  README.md  VERSION  flash.sh  prj.conf  project.yml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/features/rust-dev/: README.md  devcontainer-feature.json  install.sh
.embedops/: repo_id.yml  template-settings.yml
.embedops/hil/: config.yml
.github/workflows/: ceedling.yml  twister.yml  zephyr.yml
app/: CMakeLists.txt  prj.conf
app/boards/: nrf52dk_nrf52832.overlay  thing52_nrf52832.overlay  thingy52_nrf52832.overlay
app/csrc/: ble.c  main.c
app/src/: ble.c  ble.h  bme280.c  bme280.h  conversions.c  conversions.h  main.c  sensors.c  sensors.h
app/tests/: CMakeLists.txt  project.yml  test_ceedling.c  testcase.yaml
app/tests/src/: main.c
app/tests/test/: test_conversions.c
boards/: nrf52dk_nrf52832.overlay
child_image/: mcuboot.conf
ci/: arm-none-gcc-build.gitlab.yml  arm-none-gcc-build.sh  ceedling.sh  hil.gitlab.yml  hil.sh  pipeline.json  pipeline.sh  twister.sh  unittest.sh  zephyr.gitlab.yml  zephyr.sh
hil/: README D5 HIL Kit.md  conftest.py  test_demo_app.py
hil/hil_sdk/: .gitignore  README.md  requirements.txt  version.py
hil/hil_sdk/examples/ble_device_scan/: README.md  conftest.py  test_ble_device_scan.py
hil/hil_sdk/examples/default_project/: README.md  conftest.py  test_default.py
hil/hil_sdk/examples/dfu_test/: README.md  conftest.py  test_dfu.py
hil/hil_sdk/examples/nus_echo/: README.md  conftest.py  test_nus_echo.py
hil/hil_sdk/examples/openvpn_test/: README.md  conftest.py  test_openvpn.py
hil/hil_sdk/examples/ppk2/: README.md  conftest.py  test_ppk2.py
hil/hil_sdk/examples/scp_test/: README.md  conftest.py  test_scp.py
hil/hil_sdk/examples/serial_ip/: README.md  conftest.py  test_serial_ip.py
hil/hil_sdk/examples/shell_test/: README.md  conftest.py  test_shell.py
hil/hil_sdk/examples/visa_scope/: README.md  conftest.py  test_screenshot.py
hil/hil_sdk/examples/visa_scope_rigol/: README.md  conftest.py  test_screenshot.py
hil/hil_sdk/interfaces/: __init__.py  gpio_interface.py  jlink_interface.py  nrfjprog_interface.py  remote_interface.py  rtt_interface.py
hil/hil_sdk/interfaces/ble/: ble_client.py  ble_scanner.py  ble_types.py
hil/hil_sdk/interfaces/network/: tcp.py
hil/hil_sdk/interfaces/openvpn/: __init__.py  (+1 more)
src/: ble.c  ble.h  bme280.c  bme280.h  cli.c  main.c  serial.c  serial.h  util.c  util.h
test/: project.yml  test_util.c
(+14 files in other folders)
